[package]
name = "trade-sleep-tg-bot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = "0.4.0"
log = "0.4.14"
pretty_env_logger = "0.4.0"
tokio = { version = "1.5.0", features = ["macros", "rt-multi-thread", "sync"] }
tokio-stream = "0.1.5"
futures = "0.3.14"
chrono = "0.4.19"
chrono-tz = "0.5.3"
warp = "0.3.1"

[profile.release]
lto = true
