[package]
name = "trade-sleep-tg-bot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.4.0", features = ["macros"] }
log = "0.4.14"
pretty_env_logger = "0.4.0"
tokio = { version = "1.5.0", features = ["macros", "rt-multi-thread", "sync"] }
tokio-stream = "0.1.5"
futures = "0.3.14"
warp = "0.3.1"
diesel = {version = "1.4.6",features = ["postgres"]}

[profile.release]
lto = true
